hdf5-derive/tests/compile-fail/empty-tuple-struct.stderr
error: cannot derive `H5Type` for empty tuple structs
 --> $DIR/empty-tuple-struct.rs:7:8
  |
7 | struct Foo();
  |        ^^^
